# MacPhersonian

./: .gitignore  CMakeLists.txt  CMakePresets.json  OMs.h  README.md  find_all_OMs.c
Creating all oriented matroids/: lower_cones.c  translate_Finschi_representatives.c
Creating all oriented matroids/Oriented matroids rank 3 6 elements/: OMs_rank3_6elements_13bases.txt  OMs_rank3_6elements_15bases.txt  OMs_rank3_6elements_16bases.txt
Creating all oriented matroids/Oriented matroids rank 3 7 elements/: OMs_rank3_7elements_10bases.txt  OMs_rank3_7elements_13bases.txt  OMs_rank3_7elements_15bases.txt  OMs_rank3_7elements_9bases.txt
Finding fixed points/: Fixed oriented matroids.tex  OMs.c  construct_fixed_OMs.c  fixed_OMs_rank3_9elements_group_Z3+Z3.txt  longer_l.c  short_l.c
Finding fixed points/Fixed oriented matroids/: fixed_OMs_rank3_11elements_group_Z11.txt  fixed_OMs_rank3_6elements_group_Z3.txt  fixed_OMs_rank3_6elements_group_Z3diag.txt  fixed_OMs_rank3_6elements_group_Z5.txt  fixed_OMs_rank3_8elements_group_Z2+Z2+Z2.txt  fixed_OMs_rank3_8elements_group_Z5.txt  fixed_OMs_rank3_8elements_group_Z7.txt  fixed_OMs_rank4_8elements_group_Z2+Z2+Z2.txt  fixed_OMs_rank4_8elements_group_Z2+Z2.txt
resources/Finischi_representatives/: Finschi_2_2.txt  Finschi_3_4.txt  Finschi_4_6.txt  README.md
resources/Finschi_representatives/: README.md
resources/fixed_matroid_sets/: fixed_OMs_rank3_7elements_group_Z7.txt  fixed_OMs_rank4_8elements_group_D3.txt
resources/matroid_sets/: README.md  matroids09_bases.REMOVED.git-id
src/: generate_all_matroids.py  main.cpp
(+113 files in other folders)
